@@ -27,5 +27,6 @@
 #define GCERR_WRITE_FIRST_LOWERCASE 6
 #define GCERR_WRITE_FIRST_UPPERCASE 7
 #define GCERR_REPEATING_WORD 8
+#define GCERR_TERMINATING_PUNCTUATION_MISSING 9
 
 #endif
