@@ -1,4 +1,4 @@
-.TH VOIKKOGC 1 "2008-07-01"
+.TH VOIKKOGC 1 "2008-08-13"
 .SH NAME
 voikkogc \- test program for Voikko grammar checker
 .SH SYNOPSIS
@@ -21,6 +21,10 @@ Instead of looking for grammar errors, split input into sentences. The sentences
 by type: "B" means that end of sentence is a probably correct, "P" means that end of sentence
 is a possibly correct (but probably this and the next identified sentence should be joined) and
 "E" means that sentence ends at the end of input.
+.TP
+.BI accept_titles= n
+.br
+Set the value of the specified boolean option.
 .SH AUTHOR
 voikkogc and this manual page were written by Harri Pitk\[:a]nen (hatapitk@iki.fi).
 
